spec/errors/syntax/invalid_parameter.lang
#
# Invalid Parameter Name
#

{ |1|
}
